; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netgraph/extr_ng_sample.c_ng_xxx_shutdown.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netgraph/extr_ng_sample.c_ng_xxx_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32 }
%struct.TYPE_10__ = type { %struct.TYPE_11__* }

@M_NETGRAPH = common dso_local global i32 0, align 4
@NGF_REALLY_DIE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_11__*)* @ng_xxx_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ng_xxx_shutdown(%struct.TYPE_11__* %0) #0 {
  %2 = alloca %struct.TYPE_11__*, align 8
  %3 = alloca %struct.TYPE_10__*, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %2, align 8
  %4 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %5 = call %struct.TYPE_10__* @NG_NODE_PRIVATE(%struct.TYPE_11__* %4)
  store %struct.TYPE_10__* %5, %struct.TYPE_10__** %3, align 8
  %6 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %7 = call i32 @NG_NODE_SET_PRIVATE(%struct.TYPE_11__* %6, i32* null)
  %8 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %9 = call i32 @NG_NODE_UNREF(%struct.TYPE_11__* %8)
  %10 = load %struct.TYPE_10__*, %struct.TYPE_10__** %3, align 8
  %11 = load i32, i32* @M_NETGRAPH, align 4
  %12 = call i32 @free(%struct.TYPE_10__* %10, i32 %11)
  ret i32 0
}

declare dso_local %struct.TYPE_10__* @NG_NODE_PRIVATE(%struct.TYPE_11__*) #1

declare dso_local i32 @NG_NODE_SET_PRIVATE(%struct.TYPE_11__*, i32*) #1

declare dso_local i32 @NG_NODE_UNREF(%struct.TYPE_11__*) #1

declare dso_local i32 @free(%struct.TYPE_10__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
